# glen

./: CMakeLists.txt  README.md
dependencies/glew/: glew32s.lib
glen/: glen.vcxproj  glen.vcxproj.filters
glen/Debug/: glen.exe.recipe  vc143.idb
glen/Debug/glen.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  glen.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glen/src/: main.cpp
glen/src/Texture/: Texture.cpp
glen/src/Utils/: GlenConstants.h  MiscHelper.cpp  MiscHelper.h  MiscHelper.tpp
resources/shaders/: shader.frag  shader.vert
src/: AppState.h  Application.cpp  Application.h  GLError.cpp  GLError.h  GlenConstants.h  MiscHelper.cpp  MiscHelper.h  MiscHelper.tpp  Shader.cpp  Shader.h  main.cpp
src/Application/: AppState.h  Application.cpp  Application.h
src/Error/: GLError.cpp
src/Shader/: Shader.cpp  Shader.h
src/Texture/: Texture.cpp  Texture.h
src/Utils/: LogType.h  MiscHelper.cpp  MiscHelper.h  MiscHelper.tpp
